# Roshar

./: .gitignore  .gitmodules  1-52.json  Assets.hpp  CMakeCache.txt  CMakeLists.txt  Collision.cpp  Collision.hpp  Editor.cpp  Editor.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  Roshar.sln  Roshar.vcxproj  Roshar.vcxproj.filters  Time.cpp  Time.hpp  build.ps1  build_web.ps1  config.json  constexpr.hpp  dyn_struct.cpp  dyn_struct.hpp  global.cpp  global.hpp  imconfig.h  imgui-SFML.cpp  imgui-SFML.h  imgui.ini  link_web.ps1  macros.hpp  main.cpp  project.4coder  start_config.json  web_main.cpp  win32_main.cpp  (+1 more)
Graphic/: Animation.cpp  Animation.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Graphics.cpp  Graphics.hpp  OpenGL.hpp  Particle.cpp  Particle.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  imgui_impl_win32.hpp
Managers/: AssetsManager.cpp  AssetsManager.hpp  InputsManager.cpp  InputsManager.hpp  MemoryManager.cpp  MemoryManager.hpp  TimerManager.cpp  TimerManager.hpp
Math/: Circle.hpp  Matrix.hpp  Rectangle.hpp  Segment.hpp  Vector.hpp
Memory/: ValuePtr.hpp
OS/: RealTimeIO.hpp  file.hpp
OS/Windows/: RealTimeIO.cpp  file.cpp
Performance report/: Report20190819-1412.diagsession
assets/: config.json
assets/fonts/: consola_regular_100.json  consolas_regular_100.json  consolas_regular_100.xml
assets/levels/: 1-1.json  1-1.test  1-10.json  1-10.test  1-11.json  1-11.test  1-12.json  1-12.test  1-13.json  1-13.test  1-14.json  1-14.test  1-15.json  1-15.test  1-16.json  1-16.test  1-17.json  1-17.test  1-18.json  1-18.test  1-19.json  1-19.test  1-1x.json  1-2.json  1-2.test  1-20.json  1-20.test  1-21.json  1-21.test  1-22.json  1-22.test  1-23.json  1-23.test  1-24.json  1-24.test  1-25.json  1-25.test  1-26.json  1-26.test  1-27.json  (+102 more)
assets/models/: eins.blend  eins.blend1
assets/shaders/: default.fragment  default.vertex  hdr.fragment  hdr.vertex  light.fragment  light.vertex
assets/textures/: 1-3_back.ase  1-4.json  1-4_back.ase  1-6_back.ase  Eins.ase  bottled.ase  dust.ase  imgui.ini  rock.ase
levels/: 1-1.json  1-1.test  1-10.json  1-10.test  1-11.json  1-11.test  1-12.json  1-12.test  1-13.json  1-13.test  1-14.json  1-14.test  1-15.json  1-15.test  1-16.json  1-16.test  1-17.json  1-17.test  1-18.json  1-18.test  1-19.json  1-19.test  1-2.json  1-2.test  1-20.json  1-20.test  1-21.json  1-21.test  1-22.json  1-22.test  1-23.json  1-23.test  1-24.json  1-24.test  1-25.json  1-25.test  1-26.json  1-26.test  1-27.json  1-27.test  (+67 more)
models/: guy.blend  untitled.blend  untitled.blend1
output/trace/: Shutup.json  Startup.json
shaders/: default.fragment  default.vertex  hdr.fragment  hdr.vertex  light.fragment  light.vertex
src/: Assets.hpp  Collision.cpp  Collision.hpp  Editor.cpp  Editor.hpp  Formats.cpp  Formats.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  StartScreen.cpp  StartScreen.hpp  Time.hpp  constexpr.hpp  dyn_struct.cpp  dyn_struct.hpp  global.cpp  global.hpp  imgui_impl_web.cpp  imgui_impl_web.hpp  introspection.hpp  macros.hpp  xstd.hpp
src/Entry/: main.cpp  web_main.cpp  win32_main.cpp
src/Graphic/: Animation.cpp  Font.cpp  Font.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Graphics.cpp  Graphics.hpp  Particle.cpp  Particle.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp  imgui_impl_win32.cpp
src/Graphic/UI/: Kit.cpp  Kit.hpp
src/Managers/: AssetsManager.cpp  AssetsManager.hpp  EntityManager.hpp  InputsManager.cpp  InputsManager.hpp
src/Math/: Random.hpp  RandomData.hpp  Ray.hpp  Rectangle.hpp  Segment.hpp  Vector.hpp
src/OS/: OpenGL.hpp  Process.hpp  RealTimeIO.hpp  file.hpp
src/OS/Emscripten/: RealTimeIO.cpp  file.cpp
src/OS/Windows/: Process.cpp  RealTimeIO.cpp  file.cpp
src/Profil/: Profile.cpp  Profile.hpp
src/Profiler/: Timer.hpp  Tracer.cpp  Tracer.hpp
src/Screens/: Level.hpp  LevelSelection.cpp  LevelSelection.hpp  PlayScreen.cpp  PlayScreen.hpp  ProfileSelection.cpp  ProfileSelection.hpp  Screen.hpp  Settings.cpp  Settings.hpp  Start.cpp  Start.hpp  Untitled-11.txt
textures/: 1-1_back.ase  1-2_back.ase  1-5.json  1-5_back.ase  Eins.ase  basi_binding_indicator_body.ase  basi_binding_indicator_head.ase  better_guy.ase  guy.ase  guy_sheet.json  indicator.ase  key.ase  roc.ase  rock.ase
